stuck at issue with global css

--- a/src/js/components/Header/components/Header/components/UserMenu/style/usermenu.scss
+++ b/src/js/components/Header/components/Header/components/UserMenu/style/usermenu.scss
@@ -1,3 +1,6 @@
+/* todo: this var should come from the global css, it shouldnt be defined here */
+$orange-darken: #c96800;
+
 .user_menu {
     position: absolute;
     right: 1rem;
