--- a/src/style/base/colours.scss
+++ b/src/style/base/colours.scss
@@ -1,8 +1,1 @@
-$white: #fff;
-
-$orange: #ef7c00;
 $orange-darken: #c96800;
-
-.knoppie {
-    color: #ff0000;
-}
